attempt to fix camera not working correctly on iPhone

--- a/public/src/mirror.css
+++ b/public/src/mirror.css
@@ -28,6 +28,8 @@
 
 #videoMirror {
 	position: relative;
+	width: 100% !important;
+	height: 100% !important;
 	object-fit: cover;
 	transform: scaleX(-1); /* mirror the camera */
 	border-radius: 50%;
